# ai-test

./: ToDo.txt  image_recognition.py  pyproject.toml  reasoning.py  test.py  test1.py
RAG/: pg_rag.py
function_calling/: amap.py  database.py  sum.py  test.py
general/: keys.py  log.py
prompt_engineering/: data_package.py  multi_turn_chat.py  service_quality_check.py
