[tool.poetry]
name = "ai-test"
version = "0.1.0"
description = ""
authors = ["DongJun <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


openai = "^1.97.0"
pillow = "^11.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"